syntax = "proto3";

package section03;
option java_package = "dev.da0hn.grpc.proto.models.section03";
option java_multiple_files = true;

message Person {
  string first_name = 1;
  string last_name = 2;
  int32 age = 3;
  string email = 4;
  bool employed = 5;
  double salary = 6;
  int64 bank_account_number = 7;
  sint32 balance = 8;
}


